# sudoku_solver

./: CMakeLists.txt  README.md
data/: sudoku.txt
src/: CMakeLists.txt  main.cpp  sudoku.cpp  sudoku.h
test/: CMakeLists.txt  test_sudoku.cpp
